[MOSIP-552] Properties updated.

--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/application-dmz.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/application-dmz.properties
@@ -281,15 +281,14 @@ mosip.kernel.licensekey.permissions=OTP Trigger,OTP Authentication,Demo Authenti
 
 #-----------------------------Virus Scanner--------------------------------------
 #Virus Scanner server url
-# Here we have specified any node of MZ cluster where clamav is running
-mosip.kernel.virus-scanner.host=mzworker0  
-#Virus Scanner server port: 
+mosip.kernel.virus-scanner.host=mzworker0
+#Virus Scanner server port
 mosip.kernel.virus-scanner.port=30310
 
 
 
 #-------------------------------FS Adapter- HDFS -------------------------------
-mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://hdfs:9000
+mosip.kernel.fsadapter.hdfs.name-node-url=hdfs://mzworker0:30124
 mosip.kernel.fsadapter.hdfs.authentication-enabled=false
 # If HDFS is security is configured with Kerberos, Key Distribution Center domain
 mosip.kernel.fsadapter.hdfs.kdc-domain=HDFSKERBEROS1.SOUTHINDIA.CLOUDAPP.AZURE.COM
