--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/registration-processor-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/registration-processor-qa.properties
@@ -256,9 +256,9 @@ registration.processor.id.repo.vidVersion=v1
 #Virus scanner packet extension
 registration.processor.packet.ext=.zip
 #Virus scanner server host
-mosip.kernel.virus-scanner.host=104.211.200.46
+mosip.kernel.virus-scanner.host=mzworker0
 #Virus scanner port
-mosip.kernel.virus-scanner.port=3310
+mosip.kernel.virus-scanner.port=30310
 #Virus scanner application request id
 registration.processor.application.id=REGISTRATION
 registration.processor.rid.machineidsubstring=10
@@ -267,14 +267,14 @@ registration.processor.rid.machineidsubstring=10
 #Packet uploader server host
 registration.processor.dmz.server.host=104.211.213.46
 #Packet uploader server user
-registration.processor.dmz.server.user=madmin
+registration.processor.dmz.server.user=sftpuser
 #Packet uploader server port
 registration.processor.dmz.server.port=22
 #Packet uploader server protocol
 registration.processor.dmz.server.protocal=sftp
 #Either password or ppk file should be provided
 #registration.processor.dmz.server.password=Madmin@12345
-registration.processor.vm.ppk=Mosip_Private_key.ppk
+registration.processor.vm.ppk=sftp_key
 #The sftp server maximum session to be created
 registration.processor.sftp.connection.pool.max.session=10
 
