--- a/deployment/sandbox-v2/app/playbooks/check.yml
+++ b/deployment/sandbox-v2/app/playbooks/check.yml
@@ -1,7 +1,5 @@
-# This play install all the tools needed on the console for 
-# further execution of automation
 - hosts: console
-  gather_facts: true 
-  roles:
-     - {role: packages/epel, tags: [epel]}
-
+  tasks:
+    - debug: 
+        msg: "{{playbook_dir}}"
+  
