--- a/deployment/sandbox-v2/app/playbooks/mosip_env.yml
+++ b/deployment/sandbox-v2/app/playbooks/mosip_env.yml
@@ -1,9 +1,9 @@
 # This play installs all the MOSIP environment
 #
-- hosts: mzworker0  # One of the dmz nodes is chosen for persistence
+- hosts: mzworker0  # One of the mz nodes is chosen for persistence
   gather_facts: true
   vars: 
-    kube_config: '{{dmz_kube_config}}'  # Deploy all these on dmz cluster
+    kube_config: '{{mz_kube_config}}'  
   tasks:
     - {name: 'Create folder', file: {name: '{{postgres_local_storage_path}}', state: directory}}
 
@@ -17,6 +17,7 @@
      - {role: keycloak/keycloak, tags: [keycloak, infra]}
      - {role: hdfs, tags: [hdfs, infra]} # 
      - {role: clamav, tags: [clamav, infra]} # 
+     - {role: activemq, tags: [activemq, infra]} # 
      - {role: ingress, tags: [ingress, infra]}
      - {role: postgres/postgres-init, tags: [postgres-init, infra]} # Start only after ingress is installed 
      - {role: keycloak/keycloak-init, tags: [keycloak-init, infra]}  
