--- a/deployment/sandbox-v2/app/playbooks/mosip_regprc.yml
+++ b/deployment/sandbox-v2/app/playbooks/mosip_regprc.yml
@@ -11,12 +11,21 @@
     - {name: 'Create sftp user', user: {name: '{{sftp_user}}'}, become: yes}
     - {name: 'sft key exchange', authorized_key: {user: '{{sftp_user}}', state: present, key: "{{lookup('file', '../roles/config-server/files/properties/sftp_key.pub')}}"}, become: yes}
 
+# DMZ services
 - hosts: console
   gather_facts: true
   vars:   
     kube_config: '{{dmz_kube_config}}'  # Deploy all these on dmz cluster
   roles:
+    - {role: regproc/camel_dmz, tags: [camel-dmz, regproc]}
     - {role: regproc/packet-receiver, tags: [packet-receiver, regproc]}
     - {role: regproc/reg_status, tags: [reg-status, regproc]}
-    - {role: regproc/camel_dmz, tags: [camel-dmz, regproc]}
  
+# MZ services
+- hosts: console
+  gather_facts: true
+  vars:   
+    kube_config: '{{mz_kube_config}}'  # Deploy all these on dmz cluster
+  roles:
+    - {role: regproc/camel_mz, tags: [camel-mz, regproc]}
+    - {role: regproc/packet-uploader, tags: [packet-uploader, regproc]}
