--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/registration-processor-dmz.properties
@@ -43,7 +43,7 @@ javax.persistence.jdbc.user=regprcuser
 javax.persistence.jdbc.password=Mosip@dev123
 
 #Hibernate properties
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.show_sql=false
