[MOSIP-552] certbot related dependecies reinstalled.

--- a/deployment/sandbox-v2/app/playbooks/console.yml
+++ b/deployment/sandbox-v2/app/playbooks/console.yml
@@ -8,9 +8,9 @@
   roles:
      - {role: packages/epel, tags: [epel]}
      - {role: packages/pip, tags: [pip]}
-     - {role: packages/requests, tags: [requests]} # For certbot
-     - {role: packages/six, tags: [six]} #  For certbot
-     - {role: packages/six, tags: [urllib3]} #  For certbot
+     #- {role: packages/six, tags: [six]} #  For certbot
+     - {role: packages/urllib3, tags: [urllib3]} #  For certbot
+     - {role: packages/requests, tags: [requests]} # For certbot. 
      - {role: packages/kubectl, tags: [kubectl]}
      - {role: packages/psql, tags: [psql]}
      - {role: packages/openshift, tags: [openshift]}
