--- a/deployment/sandbox-v2/app/roles/packages/requests/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/packages/requests/tasks/main.yml
@@ -1,11 +1,19 @@
 
-- name: Reinstall requests (otherwise certbot gives issues)
+- name: First remove pip installation (otherwise certbot gives issues)
   pip:
     name: requests
     state: absent
+  become: yes
 
-- name: Install requests with yum
+- name: Uninstall yum installation
+  yum:
+    name: python-requests
+    state: absent 
+  become: yes
+
+- name: Re-install with yum
   yum:
     name: python-requests
     state: present
+  become: yes
 
