--- a/deployment/sandbox-v2/app/roles/packages/six/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/packages/six/tasks/main.yml
@@ -1,11 +1,19 @@
 # https://medium.com/@getpagespeed/fix-importerror-pyopenssl-module-missing-required-functionality-e1c514797204
-- name: Reinstall six (otherwise certbot gives issues)
+- name: Un-install pip installation (otherwise certbot gives issues)
   pip:
     name: six
     state: absent
+  become: yes
 
-- name: Install six with yum
+- name: Uninstall six with yum
   yum:
     name: python-six
-    state: present
+    state: absent 
+  become: yes
+
+- name: Re-install six with yum
+  yum:
+    name: python-six
+    state: present 
+  become: yes
 
