--- a/deployment/sandbox-v2/app/roles/packages/urllib3/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/packages/urllib3/tasks/main.yml
@@ -1,12 +1,20 @@
 
-- name: Reinstall urllib3 (otherwise certbot gives issues)
+- name: Uninstall pip urllib3 (otherwise certbot gives issues)
   pip:
     name: urllib3
     state: absent
+  become: yes
 
-- name: Install urllib3 with yum
+- name: Uninstall urllib3 with yum
+  yum:
+    name: python-urllib3
+    state: absent
+  become: yes
+
+- name: Re-install urllib3 with yum
   yum:
     name: python-urllib3
     state: present
+  become: yes
 
 
