--- a/deployment/sandbox-v2/app/roles/ingress/mz-ingress/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/ingress/mz-ingress/tasks/main.yml
@@ -3,8 +3,10 @@
 - include_vars: ../../kernel/kernel-auth/defaults/main.yml 
 - include_vars: ../../kernel/kernel-audit/defaults/main.yml 
 - include_vars: ../../kernel/kernel-crypto/defaults/main.yml 
+- include_vars: ../../kernel/kernel-key/defaults/main.yml 
 - include_vars: ../../kernel/kernel-masterdata/defaults/main.yml 
 - include_vars: ../../kernel/kernel-applicant/defaults/main.yml 
+- include_vars: ../../kernel/kernel-sig/defaults/main.yml 
 - include_vars: ../../pre-reg/pre-reg-batchjob/defaults/main.yml 
 - include_vars: ../../pre-reg/pre-reg-booking/defaults/main.yml 
 - include_vars: ../../../pre-reg/pre-reg-datasync/defaults/main.yml 
@@ -15,6 +17,7 @@
 - include_vars: ../../pre-reg/pre-reg-notification/defaults/main.yml 
 - include_vars: ../../pre-reg/pre-reg-transliteration/defaults/main.yml 
 - include_vars: ../../pre-reg/pre-reg-ui/defaults/main.yml 
+- include_vars: ../../regproc/packet-uploader/defaults/main.yml 
 
 - name: Deploy ingress init 
   k8s:
