[MOSIP-552] Bug fixes in properties.

--- a/deployment/sandbox-v2/roles/config-server/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/registration-processor-dmz.properties
@@ -4,6 +4,9 @@ mosip.registration.processor.database.hostname=mzworker0
 # Database Port
 mosip.registration.processor.database.port=30090
 
+mz.ingress.url=http://mzworker0:30080
+
+
 #-----------Health checker--------------
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=info,health,refresh
@@ -50,8 +53,8 @@ hibernate.show_sql=false
 
 #-----packet-manager----------
 
-registration.processor.LANDING_ZONE = /mnt/regprc/landing
-registration.processor.ARCHIVE_LOCATION = /mnt/regprc/archival
+registration.processor.LANDING_ZONE = /mnt/regproc/landing
+registration.processor.ARCHIVE_LOCATION = /mnt/regproc/archival
 #Location to store the file which is consumed from the print and postal queue
 registration.processor.PRINT_POSTAL_SERVICE=/home/ftp1/PRINIT_POSTAL_SERVICE
 
@@ -88,7 +91,7 @@ token.request.clientId=mosip-reproc-client
 #Token generation secret key
 token.request.secretKey=abc123
 #Token generation issuer url
-token.request.issuerUrl=https://mosipkeycloakqa.southindia.cloudapp.azure.com/auth/realms/mosip
+token.request.issuerUrl=http://keycloak/auth/realms/mosip
 
 #--------Registration processor rest client API's--------------
 
@@ -147,13 +150,13 @@ ENCRYPTIONSERVICE=${mosip.base.url}/v1/keymanager/publickey
 PDFSIGN=${mosip.base.url}/v1/keymanager/pdf/sign
 
 #Digital Signature Service
-DIGITALSIGNATURE=${mosip.base.url}/v1/signature/sign
+DIGITALSIGNATURE=${mz.ingress.url}/v1/signature/sign
 
 #Digital Signature Id
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
 
 #--------Registration Processor Rest Client API's-----------
-DMZCRYPTOMANAGERDECRYPT=${mosip.base.url}/v1/cryptomanager/decrypt
+DMZCRYPTOMANAGERDECRYPT=${mz.ingress.url}/v1/cryptomanager/decrypt
 
 #External Service
 EISERVICE=${mosip.base.url}/registrationprocessor/v1/eis/registration-processor/external-integration-service/v1.0
@@ -387,4 +390,4 @@ mosip.registration.processor.sms.id=mosip.sms.send
 mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
-registration.processor.signature.isEnabled=true
+registration.processor.signature.isEnabled=false
