--- a/deployment/sandbox-v2/roles/config-server/files/properties/registration-processor-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/registration-processor-qa.properties
@@ -1,15 +1,15 @@
 # Database Host name
-mosip.registration.processor.database.hostname=52.172.54.231
+mosip.registration.processor.database.hostname=postgres
 
 # Database Port
-mosip.registration.processor.database.port=9001
+mosip.registration.processor.database.port=80
 
 #-----------Health checker--------------
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=info,health,refresh
 
 #------registration-processor-filesystem-adapter-hdfs-------
-mosip.kernel.fsadapter.hdfs.user-name=regprocessor-qa
+mosip.kernel.fsadapter.hdfs.user-name=regprocessor
 
 
 #------packet-bio-dedupe-service--------
@@ -46,8 +46,8 @@ hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.show_sql=false
 
 #-----packet-manager----------
-registration.processor.LANDING_ZONE = /mnt/regprc/landing
-registration.processor.ARCHIVE_LOCATION = /mnt/regprc/archival
+registration.processor.LANDING_ZONE = /mnt/regproc/landing
+registration.processor.ARCHIVE_LOCATION = /mnt/regproc/archival
 
 #Location to store the file which is consumed from the print and postal queue
 registration.processor.PRINT_POSTAL_SERVICE=/home/ftp1/PRINIT_POSTAL_SERVICE
@@ -81,7 +81,7 @@ token.request.password={cipher}AQABt4aBjlC2OxQNy04L3OtJm8KaTDwSJhV3lEpUh6xBM2xGV
 #Token generation version
 token.request.version=1.0
 #Token generation Client Id
-token.request.clientId=mosip-regproc-client
+token.request.clientId=mosip-reproc-client
 #Token generation secret key
 token.request.secretKey=abc123
 #Token generation issuer url
@@ -91,7 +91,7 @@ token.request.issuerUrl=http://keycloak/auth/realms/mosip
 
 
 #Audit Service
-AUDIT=http://kernel-audit-service/v1/auditmanager/audits
+AUDIT=http://kernel-auditmanager-service/v1/auditmanager/audits
 
 #Auth Service
 authmanager.base.url=http://kernel-auth-service
@@ -399,4 +399,4 @@ mosip.registration.processor.sms.id=mosip.sms.send
 mosip.registration.processor.email.id=mosip.email.send
 
 #Kernel Crypto signature
-registration.processor.signature.isEnabled=true
+registration.processor.signature.isEnabled=false
