--- a/deployment/sandbox-v2/roles/keycloak/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak/keycloak-init/defaults/main.yml
@@ -32,33 +32,44 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
   - {realm_id: 'mosip', client_id: '', role_name: 'PRE_REGISTRATION'}
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_ADMIN'}
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_SUPERVISOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'INDIVIDUAL'}  # TODO: later this role should not be needed in mosip realm
   - {realm_id: 'preregistration', client_id: '', role_name: 'INDIVIDUAL'}
   - {realm_id: 'preregistration', client_id: '', role_name: 'AUTH'}
   - {realm_id: 'preregistration', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'preregistration', client_id: '', role_name: 'PREREG'}
 
-keycloak_mosip_users:
+keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/testuser.json'}
 
-keycloak_mosip_user_role_map:
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'REGISTRATION_OFFICER'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'ID_AUTHENTICATION'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'DEVICE_PROVIDER'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'SUPERADMIN'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'ZONAL_ADMIN'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'GLOBAL_ADMIN'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'RESIDENT'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'REGISTRATION_PROCESSOR'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'ZONAL_APPROVER'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'REGISTRATION_OFFICER'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'REGISTRATION_OPERATOR'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'AUTH'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'CENTRAL_APPROVER'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'MISP'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'PREREG'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'CENTRAL_ADMIN'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'PRE_REGISTRATION'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'PRE_REGISTRATION_ADMIN'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'REGISTRATION_ADMIN'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'REGISTRATION_SUPERVISOR'}
-  - {realm_id: 'mosip', user_file: 'users/testuser.json', role_name: 'RESIDENT'}
+keycloak_mosip_user_role_map:  
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'ID_AUTHENTICATION'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'DEVICE_PROVIDER'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'SUPERADMIN'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'ZONAL_ADMIN'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'GLOBAL_ADMIN'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'ZONAL_APPROVER'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_OFFICER'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_OPERATOR'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'AUTH'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'CENTRAL_APPROVER'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'MISP'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'PREREG'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'CENTRAL_ADMIN'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'PRE_REGISTRATION'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'REGISTRATION_SUPERVISOR'}
+  - {realm_id: 'mosip', username: 'testuser', role_name: 'RESIDENT'}
+    # For service account mappings client name must be prefixed with service-account-
+  - {realm_id: 'mosip', username: 'service-account-mosip-pre-registration-client', role_name: 'INDIVIDUAL'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-pre-registration-client', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-pre-registration-client', role_name: 'PREREG'}
+  - {realm_id: 'preregistration', username: 'service-account-mosip-pre-registration-client', role_name: 'INDIVIDUAL'}
+  - {realm_id: 'preregistration', username: 'service-account-mosip-pre-registration-client', role_name: 'PRE_REGISTRATION_ADMIN'}
+  - {realm_id: 'preregistration', username: 'service-account-mosip-pre-registration-client', role_name: 'PREREG'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-auth-client', role_name: 'AUTH'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-regproc-client', role_name: 'REGISTRATION_PROCESSOR'}
 
