--- a/deployment/sandbox-v2/roles/keycloak/keycloak-init/tasks/create_user.yml
+++ b/deployment/sandbox-v2/roles/keycloak/keycloak-init/tasks/create_user.yml
@@ -1,9 +1,9 @@
 
 - name: 'Read name of user from {{kc_user_file}}' 
   set_fact:
-    kc_user_name: "{{(lookup('file', '{{kc_user_file}}') | from_json).username}}"
+    kc_username: "{{(lookup('file', '{{kc_user_file}}') | from_json).username}}"
 
-- name: 'Get "id" of the user {{kc_user_name}}' 
+- name: 'Get "id" of the user {{kc_username}}' 
   include_tasks: get_user_info.yml # Returns kc_user_info
 
 - set_fact:
@@ -28,7 +28,7 @@
       Authorization: "Bearer {{keycloak_admin_token}}"
   when: kc_user_id == '' 
 
-- name: 'Update User {{kc_user_name}}' 
+- name: 'Update User {{kc_username}}' 
   uri:
     url: '{{keycloak_url}}/auth/admin/realms/{{kc_realm_id}}/users/{{kc_user_id}}'
     method: PUT
