--- a/deployment/sandbox-v2/playbooks/mosip_regprc.yml
+++ b/deployment/sandbox-v2/playbooks/mosip_regprc.yml
@@ -6,7 +6,7 @@
   vars:   
     kube_config: '{{dmz_kube_config}}'  # Deploy all these on dmz cluster
   tasks:
-    - {name: 'Create landing folder', file: {name: '{{regproc_landing_folder}}', state: directory}}
+    - {name: 'Create landing folder', file: {name: '{{regproc_landing_folder}}', state: directory, owner: '{{sftp_user}}'}}
     - {name: 'Create archival folder', file: {name: '{{regproc_archival_folder}}', state: directory, owner: '{{sftp_user}}'}}
     - {name: 'Create sftp user', user: {name: '{{sftp_user}}'}, become: yes}
     - {name: 'sft key exchange', authorized_key: {user: '{{sftp_user}}', state: present, key: "{{lookup('file', '../roles/config-server/files/properties/sftp_key.pub')}}"}, become: yes}
