--- a/deployment/sandbox-v2/roles/config-server/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/application-qa.properties
@@ -306,7 +306,7 @@ mosip.kernel.transliteration.franch-language-code=fra
 
 
 #-------Registration processor Notification types------------
-mosip.registration.processor.notification.types=SMS|EMAIL
+mosip.registration.processor.notification.types=EMAIL
 
 
 mosip.default.dob.month=01
@@ -320,8 +320,7 @@ mosip.left_to_right_orientation=eng,fra
 
 
 #**************** Notification Type *************
-#mosip.notificationtype=SMS|EMAIL
-mosip.notificationtype=EMAIL
+mosip.notificationtype=SMS|EMAIL
 #******** Notification lanugage types - either PRIMARY or BOTH ********
 mosip.notification.language-type=BOTH
 
