--- a/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
@@ -44,18 +44,20 @@ mosip.kernel.sms.unicode=1
 
 # SMTP (Gmail-SMTP-Properties)
 #host being used.
-spring.mail.host=smtp.gmail.com
+spring.mail.host=in-v3.mailjet.com
 #user mail id, from which the mail will be sent.
-spring.mail.username=bonfiley@gmail.com
+spring.mail.username=cce3849e91c62663c2c9eefaa12f7dfc
 #user password, password to authenticate the above mail address.
-spring.mail.password=bon!@#$%^&*(
+spring.mail.password=60fba73e618fd4ed497006c49b6b09a8
 #port being used.
 spring.mail.port=587
 #protocol being used.
 spring.mail.properties.mail.transport.protocol=smtp
 #property to enable/disable tls.
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=false
+spring.mail.properties.mail.smtp.starttls.enable=false
 #property to enable/disable authorization.
 spring.mail.properties.mail.smtp.auth=true
 #property to set the mail debugging.
@@ -351,7 +353,7 @@ mosip.keycloak.authorization_endpoint=${mosip.keycloak.base-url}/auth/realms/{re
 mosip.kernel.prereg.realm-id=preregistration
 mosip.kernel.prereg.client.id=mosip-pre-registration-client
 mosip.kernel.prereg.secret.key=abc123
-mosip.admin.individual_role_id=2e32882a-7b66-41e6-810b-9cf084cc4054
+mosip.admin.individual_role_id=2839cd16-c9ca-48a8-877a-956b3e5c555d
 mosip.admin.pre-reg_user_password=mosip
 
 # Unused - start
