--- a/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
@@ -44,24 +44,25 @@ mosip.kernel.sms.unicode=1
 
 # SMTP (Gmail-SMTP-Properties)
 #host being used.
-spring.mail.host=in-v3.mailjet.com
+#spring.mail.host=in-v3.mailjet.com
+spring.mail.host=smtp.gmail.com
 #user mail id, from which the mail will be sent.
-spring.mail.username=cce3849e91c62663c2c9eefaa12f7dfc
+#spring.mail.username=cce3849e91c62663c2c9eefaa12f7dfc
+spring.mail.username=bonfiley@gmail.com
 #user password, password to authenticate the above mail address.
-spring.mail.password=60fba73e618fd4ed497006c49b6b09a8
+#spring.mail.password=60fba73e618fd4ed497006c49b6b09a8
+spring.mail.password=bon!@#$%^&*(
 #port being used.
 spring.mail.port=587
 #protocol being used.
 spring.mail.properties.mail.transport.protocol=smtp
 #property to enable/disable tls.
-#spring.mail.properties.mail.smtp.starttls.required=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=false
-spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 #property to enable/disable authorization.
 spring.mail.properties.mail.smtp.auth=true
 #property to set the mail debugging.
-spring.mail.debug=false
+spring.mail.debug=true
 #-------------------------------------
 # MULTIPART (Multipart-Properties)
 # Enable multipart uploads
