--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -6,10 +6,9 @@
     - {name: 'Create tmp folder', file: {name: '{tmp_dir}}', state: directory}}
     - {name: 'Create logs folder', file: {name: '{logs_dir}}', state: directory}}
   roles:
-     # TODO: Add python 3 for test scripts
      - {role: packages/epel, tags: [epel]}
      - {role: packages/pip, tags: [pip]}
-     - {role: packages/python3, tags: [python3]}
+     - {role: packages/python3, tags: [python3]} # Needed for letsencrypt and test scripts
      - {role: packages/kubectl, tags: [kubectl]}
      - {role: packages/psql, tags: [psql]}
      - {role: packages/openshift, tags: [openshift]}
