--- a/deployment/sandbox-v2/roles/postgres/postgres-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/postgres/postgres-init/defaults/main.yml
@@ -1,5 +1,5 @@
 pg_common_sql_path: '{{commons_repo_location}}/db_scripts' 
-pg_pre_reg_sql_path: '{{pre_reg_repo_location}}/db_scripts'
+pg_prereg_sql_path: '{{prereg_repo_location}}/db_scripts'
 pg_regproc_sql_path: '{{regproc_repo_location}}/db_scripts'
 pg_databases:
     - {sql: '{{pg_common_sql_path}}', db_name: 'mosip_kernel'}
@@ -8,5 +8,5 @@ pg_databases:
     - {sql: '{{pg_common_sql_path}}', db_name: 'mosip_audit'}
     - {sql: '{{pg_common_sql_path}}', db_name: 'mosip_idrepo'}
     - {sql: '{{pg_common_sql_path}}', db_name: 'mosip_idmap'}
-    - {sql: '{{pg_pre_reg_sql_path}}', db_name: 'mosip_prereg'}
+    - {sql: '{{pg_prereg_sql_path}}', db_name: 'mosip_prereg'}
     - {sql: '{{pg_regproc_sql_path}}', db_name: 'mosip_regprc'}
