--- a/deployment/sandbox-v2/roles/clamav/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/clamav/tasks/main.yml
@@ -6,7 +6,7 @@
      src: k8s_clamav.yml.j2
      dest: '{{tmp_dir}}/k8s_clamav.yml'
 
-- name: Deploy Keycloak on Kurbernetes
+- name: Deploy on Kurbernetes
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_clamav.yml'
