--- a/deployment/sandbox-v2/roles/hdfs/tasks/create_user.yml
+++ b/deployment/sandbox-v2/roles/hdfs/tasks/create_user.yml
@@ -2,7 +2,7 @@
 # ownership
 #
 - name: 'Add user {{hdfs_user}}'
-  command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "useradd {{hdfs_user}}"'
+  command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "id -u {{hdfs_user}} &>/dev/null || useradd {{hdfs_user}}"'
 
 - name: 'Create directory for {{hdfs_user}}'
   command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfs -mkdir -p {{hdfs_user_dir}}"' 
