--- a/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
@@ -45,13 +45,13 @@ mosip.kernel.sms.unicode=1
 # SMTP (Gmail-SMTP-Properties)
 #host being used.
 #spring.mail.host=in-v3.mailjet.com
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.sendgrid.net
 #user mail id, from which the mail will be sent.
 #spring.mail.username=cce3849e91c62663c2c9eefaa12f7dfc
-spring.mail.username=technoforte.mosip@gmail.com
+spring.mail.username=intemail
 #user password, password to authenticate the above mail address.
 #spring.mail.password=60fba73e618fd4ed497006c49b6b09a8
-spring.mail.password=Aswin@123
+spring.mail.password=Email@123
 #port being used.
 spring.mail.port=587
 #protocol being used.
