--- a/deployment/sandbox-v2/roles/hdfs/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/hdfs/tasks/main.yml
@@ -7,11 +7,11 @@
      dest: '{{tmp_dir}}/helm_hdfs_values.yml'
 
 - name: Check if hdfs already running
-  command: 'helm list {{hdfs_name}}'
+  command: 'helm --kubeconfig {{kube_config}} list {{hdfs_name}}'
   register: out
 
 - name: Deploy hdfs through helm
-  command: 'helm install --replace stable/hadoop --values {{tmp_dir}}/helm_hdfs_values.yml --name {{hdfs_name }}' 
+  command: 'helm --kubeconfig {{kube_config}} install --replace stable/hadoop --values {{tmp_dir}}/helm_hdfs_values.yml --name {{hdfs_name }}' 
   register: out
   when: hdfs_name not in out.stdout
 
@@ -21,7 +21,7 @@
 - name: Wait for HDFS to come out of safe mode
   command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfsadmin -safemode get"'
   register: out 
-  retries: 5 
+  retries: 10 
   delay: 10
   until: "'Safe mode is OFF' in out.stdout"
 
