--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -2,9 +2,9 @@
 #
 - import_playbook: playbooks/console.yml  # Basic setup on console machine
 - import_playbook: playbooks/mzcluster.yml  # MZ cluster setup 
-- import_playbook: playbooks/dmzcluster.yml  # DMS cluster setup
+- import_playbook: playbooks/dmzcluster.yml  # DMZ cluster setup
 - import_playbook: playbooks/mosip_env.yml # MOSIP DB, Keycloak, hdfs etc.
-- import_playbook: playbooks/config-server.yml   
+- import_playbook: playbooks/config-server.yml    
 - import_playbook: playbooks/mosip_kernel.yml
 - import_playbook: playbooks/mosip_prereg.yml
 - import_playbook: playbooks/mosip_regproc.yml
